# echo

./: .gitattributes  .gitignore  Cargo.toml  agent-prompt-ingestion-pipeline.md
.context/: api_spec.md  coding_rules.md  context_guide.md  data_models.md  decisions.md  design.md  progress.md  project_brief.md  roadmap.md
src/: lib.rs  main.rs
src/config/: mod.rs
src/embedding/: mod.rs
src/ingestion/: chunker.rs  cleaner.rs  extractor.rs  mod.rs
src/qdrant/: mod.rs
src/tui/: collection_browser.rs  config_screen.rs  mod.rs  point_viewer.rs  search_screen.rs
